--- a/.gitea/workflows/prod-docker-images.yml
+++ b/.gitea/workflows/prod-docker-images.yml
@@ -1,8 +1,11 @@
 name: Build and Push Docker Container
+
 on:
   push:
     branches:
       - main
+    tags:
+      - '*'         # reagiert auf jeden Tag-Push
   workflow_dispatch:
 
 jobs:
@@ -16,15 +19,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # --- Extract Version Tag or Commit SHA ---
-      - name: Determine version tag
-        id: version
-        run: |
-          TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          echo "VERSION_TAG=$TAG" >> $GITHUB_ENV
-          echo "Using version tag: $TAG"
-
-      # --- Login to Gitea Registry ---
+      # --- Logins ---
       - name: Login to Gitea Registry
         uses: docker/login-action@v3
         with:
@@ -32,18 +27,19 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.ACTION_ACCESS_TOKEN }}
 
-      # --- Login to Docker Hub ---
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Convert repository owner to lowercase
+      - name: Repo owner to lowercase (for Gitea namespace)
         run: echo "REPO_OWNER_LC=$(echo '${{ gitea.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      # --- Build and Push to Both Registries ---
-      - name: Build and push Docker image
+      # ---------------- BRANCH BUILD (main) ----------------
+      # On Branch: Gitea and Docker Hub :latest
+      - name: Build & push (branch -> only :latest everywhere)
+        if: ${{ github.ref_type == 'branch' && github.ref == 'refs/heads/main' }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -52,4 +48,14 @@ jobs:
           tags: |
             ${{ vars.DOCKER_REGISTRY_URL }}/${{ env.REPO_OWNER_LC }}/apache-php:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/apache-php:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/apache-php:${{ env.VERSION_TAG }}
+
+      # ---------------- TAG BUILD ----------------
+      # On tag: Docker Hub :<tag>
+      - name: Build & push (tag -> tag on Docker Hub)
+        if: ${{ github.ref_type == 'tag' }}
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/apache-php:${{ github.ref_name }}
